02-microservices-avanzado/k8s/message-queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-queue
  namespace: shopmicro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-queue
  template:
    metadata:
      labels:
        app: message-queue
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "500m"
