02-microservices-avanzado/k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: shopmicro
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
