02-microservices-avanzado/k8s/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: shopmicro
spec:
  selector:
    app: cache
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
