02-microservices-avanzado/k8s/db-orders-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-orders-headless
  namespace: shopmicro
spec:
  clusterIP: None
  selector:
    app: db-orders
  ports:
    - port: 3306
      targetPort: 3306
