02-microservices-avanzado/k8s/db-products-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-products-headless
  namespace: shopmicro
spec:
  clusterIP: None
  selector:
    app: db-products
  ports:
    - port: 3306
      targetPort: 3306
