02-microservices-avanzado/k8s/message-queue-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-queue-headless
  namespace: shopmicro
spec:
  clusterIP: None
  selector:
    app: message-queue
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
