02-microservices-avanzado/k8s/message-queue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-queue
  namespace: shopmicro
spec:
  selector:
    app: message-queue
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  type: ClusterIP
