02-microservices-avanzado/k8s/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: shopmicro
spec:
  selector:
    app: order-service
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
