02-microservices-avanzado/k8s/product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: shopmicro
spec:
  selector:
    app: product-service
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
