02-microservices-avanzado/k8s/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: shopmicro
spec:
  selector:
    app: user-service
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
